@@ -26,6 +26,8 @@ App.DagViewController = App.TablePageController.extend({
 
   cacheDomain: Ember.computed.alias('controllers.dag.id'),
 
+  showAutoUpdate: false,
+
   columnSelectorTitle: 'Customize vertex tooltip',
 
   beforeLoad: function () {
