@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
   TEZ-2679. Admin forms of launch env settings
 
 ALL CHANGES
+  TEZ-2930. Tez UI: Parent controller is not polling at times
   TEZ-1670. Add tests for all converter functions in HistoryEventTimelineConversion.
   TEZ-2929. Tez UI: Dag details page displays vertices to be running even when dag have completed
   TEZ-2927. Tez UI: Graciously fail when system-metrics-publisher is disabled
